--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Maazan</h1>
-							<p>For all your volunteering needs.</a>.</p>
+							<p>For all your volunteering needs.</a></p>
 							<!--
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
