--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<header class="site-header">
+		<h1 class="site-name">Your Name</h1>
+
+		<img src="profile.jpg"
+			 alt="Profile picture"
+			 class="profile-pic">
+	</header>
+
 	<head>
 		<title>Maazan</title>
 		<meta charset="utf-8" />
