--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+
 	<header class="site-header">
-		<h1 class="site-name">Your Name</h1>
+		<h1 class="site-name">Your N Maazan</h1>
 
 		<img src="profile.jpg"
 			 alt="Profile picture"
@@ -18,8 +19,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Sidebar -->
