--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 	</header>
 
 	<head>
-		
+		<title>Maazan</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 
@@ -41,8 +45,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Maazan</h1>
-							<p>For all your volunteering needs.</a></p>
+							
 							<!--
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
