--- a/index.html
+++ b/index.html
@@ -57,13 +57,11 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="generic.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									
-								</div>
+							<div class="image-row">
+								<div class="img-box">Image 1</div>
+								<div class="img-box">Image 2</div>
 							</div>
+
 						</section>
 						<section>
 							<a href="generic.html" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
