--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 -->
 <html>
 
-	<header class="site-header">
+	<body class="site-header">
 		<h1 class="site-name">Your N Maazan</h1>
 
 		<img src="profile.jpg"
 			 alt="Profile picture"
 			 class="profile-pic">
-	</header>
+	</body>
 
 	<head>
 		<title>Maazan</title>
@@ -61,7 +61,12 @@
 								<div class="img-box">Image 1</div>
 								<div class="img-box">Image 2</div>
 							</div>
-
+							<div class="content">
+								<div class="inner">
+									<h2>Volunteering Groups</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									
+								</div>
 						</section>
 						<section>
 							<a href="generic.html" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
