--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 				<section>
 					
 					<div class="image-row">
-						<div class="img-box">Image 1</div>
-						<div class="img-box">Image 2</div>
+						<div class="img-box"><a href="#two">Image 1</a></div>
+						<div class="img-box"><a href="#two">Image 2</a></div>
+						<div class="img-box"><a href="#two">Image 3</a></div>
 					</div>
 					
 				</section>
