--- a/index.html
+++ b/index.html
@@ -47,10 +47,18 @@
 			<section id="intro" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
 
-					<!--
-				<ul class="actions">
-					<li><a href="#one" class="button scrolly">Learn more</a></li>
-				</ul> -->
+
+
+					<div class="hero-image">
+						<img src="images/map.jpg" alt="Map">
+
+						<div class="hero-content">
+							<h2>Find Volunteer Groups Near You</h2>
+							<p>Search by location and connect instantly.</p>
+							<a href="#one" class="button">Explore</a>
+						</div>
+					</div>
+
 				</div>
 			</section>
 
