--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 				<section>
 					
 					<div class="image-row">
-						<div class="img-box"><a href="#two">Image 1</a></div>
-						<div class="img-box"><a href="#two">Image 2</a></div>
-						<div class="img-box"><a href="#two">Image 3</a></div>
+						<div class="img-box" href="#two">Image1</div>
+						<div class="img-box" href="#two">Image2</div>
+						<div class="img-box" href="#two">Image3</div>
 					</div>
 					
 				</section>
