--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 				<section>
 					
 					<div class="image-row">
-						<div class="img-box" href="#two"> Image 1 </div>
-						<div class="img-box" href="#two"> Image 2 </div>
-						<div class="img-box" href="#two"> Image 3 </div>
+						<a class="img-box" href="#two"> Image 1 </a>
+						<a class="img-box" href="#two"> Image 2 </a>
+						<a class="img-box" href="#two"> Image 3 </a>
 					</div>
 					
 				</section>
