--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<section class="site-header">
 			<h1 class="site-name">Your N Maazan</h1>
 
-			<img src="profile.jpg"
+			<img src="profile.png"
 				 alt="Profile picture"
 				 class="profile-pic">
 		</section>
