--- a/index.html
+++ b/index.html
@@ -45,15 +45,25 @@
 
 			<!-- Intro -->
 			<section id="intro" class="wrapper style1 fullscreen fade-up">
-				<div class="inner">
+				<div class="hero-container">
 
+					<!-- Main Hero Image -->
+					<img src="images/hero.jpg" alt="Main Map" class="hero-bg">
 
+					<!-- Clickable Image 1 -->
+					<a href="page1.html" class="hero-link link1">
+						<img src="images/group1.jpg" alt="Group 1">
+					</a>
 
-					<div class="hero-image">
-						<img src="images/map.jpg" alt="Map">
+					<!-- Clickable Image 2 -->
+					<a href="page2.html" class="hero-link link2">
+						<img src="images/group2.jpg" alt="Group 2">
+					</a>
 
-						
-					</div>
+					<!-- Clickable Image 3 -->
+					<a href="page3.html" class="hero-link link3">
+						<img src="images/group3.jpg" alt="Group 3">
+					</a>
 
 				</div>
 			</section>
