--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
 
 		<section class="site-header">
 			<h1 class="site-name">Your N Maazan</h1>
-
-			<img src="profile.png"
-				 alt="Profile picture"
-				 class="profile-pic">
 		</section>
 		<!-- Sidebar -->
 		<section id="sidebar">
@@ -58,18 +54,18 @@
 						</div>
 
 						<!-- Clickable Image 1 -->
-						<a href="page1.html" class="hero-link link1">
-							<img src="images/group1.jpg" alt="Group 1">
+						<a href="generic.html" class="hero-link link1">
+							<img src="images/profile.png" alt="">
 						</a>
 
 						<!-- Clickable Image 2 -->
-						<a href="page2.html" class="hero-link link2">
-							<img src="images/group2.jpg" alt="Group 2">
+						<a href="volun2.html" class="hero-link link2">
+							<img src="images/profile.png" alt="">
 						</a>
 
 						<!-- Clickable Image 3 -->
-						<a href="page3.html" class="hero-link link3">
-							<img src="images/group3.jpg" alt="Group 3">
+						<a href="volun3.html" class="hero-link link3">
+							<img src="images/profile.png" alt="">
 						</a>
 
 					</div>
@@ -82,9 +78,9 @@
 				<section>
 
 					<div class="image-row">
-						<a class="img-box" href="#two"> Image 1 </a>
-						<a class="img-box" href="#two"> Image 2 </a>
-						<a class="img-box" href="#two"> Image 3 </a>
+						<a class="img-box" href="#two"> <img src="images/mechgroup.png" alt=""> </a>
+						<a class="img-box" href="#two"> <img src="images/swimgroup.png" alt=""> </a>
+						<a class="img-box" href="#two"> <img src="images/artgroup.png" alt=""> </a>
 					</div>
 
 				</section>
@@ -98,42 +94,50 @@
 					<p>Maazan is a website designed to help volunteers and organizations.</p>
 					<div class="features">
 						<section>
-							<span class="icon solid major fa-code"></span>
+							<span class="icon solid major fa-link"></span>
 
 							<h3>Group Management</h3>
-							<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							<p>Are you in a club or group of some sort? Great! Maazan has specific tools for group management to make group volunteering sublime.</p>
 						</section>
 						<section>
-							<span class="icon solid major fa-lock"></span>
+							<span class="icon solid major fa-globe"></span>
 
 							<h3>Geographical Search</h3>
-							<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							<p>Maazan works hard to show you specific detail about the volunteering opportunities right outside your door.</p>
 						</section>
 						<section>
-							<span class="icon solid major fa-cog"></span>
+							<span class="icon solid major fa-smile"></span>
 
 							<h3>Easy Sign-Up</h3>
-							<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+							<p>Maazan makes volunteering as easy as clicking a button. Try it!</p>
+
+						</section>
+						<section>
+							<span class="icon solid major fa-dollar-sign"></span>
+
+							<h3>Free Service</h3>
+							<p>Not interested in paying money? No worries! Maazan has completely free and convenient options for you.</p>
+
 						</section>
 						<!--
-					<section>
-					<span class="icon solid major fa-desktop"></span>
+		<section>
+		<span class="icon solid major fa-desktop"></span>
 
-					<h3>Veroeros quis lorem</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon solid major fa-link"></span>
+		<h3>Veroeros quis lorem</h3>
+		<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+	</section>
+	<section>
+		<span class="icon solid major fa-link"></span>
 
-					<h3>Urna quis bibendum</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				<section>
-					<span class="icon major fa-gem"></span>
-					<h3>Aliquam urna dapibus</h3>
-					<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-				</section>
-				-->
+		<h3>Urna quis bibendum</h3>
+		<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+	</section>
+	<section>
+		<span class="icon major fa-gem"></span>
+		<h3>Aliquam urna dapibus</h3>
+		<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+	</section>
+	-->
 					</div>
 				</div>
 			</section>
@@ -142,7 +146,7 @@
 			<section id="three" class="wrapper style1 fade-up">
 				<div class="inner">
 					<h2>Get in touch</h2>
-					<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+					<p>If you have any questions about operations at Maazan, do not hesitate to ask! We would love to hear from you.</p>
 					<div class="split style1">
 						<section>
 							<form method="post" action="#">
