--- a/volun3.html
+++ b/volun3.html
@@ -16,12 +16,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Maazan</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="generic.html" class="active">Volunteer</a></li>
+
 					</ul>
 				</nav>
 			</header>
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">School Football Concessions</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<p>We need volunteers to manage the concession stand for the school's football game.</p>
 							<p>NEEDED VOLUNTEERS: 3/5</p>
 							<ul class="actions">
