--- a/volun2.html
+++ b/volun2.html
@@ -16,13 +16,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Volunteer</a>
 				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="generic.html" class="active">Maazan</a></li>
+                    </ul>
 				</nav>
 			</header>
 
@@ -33,7 +32,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Library Book Management</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<p>We would love some volunteers to assist our staff in organizing, labelling, and covering new books. We require volunteers to be 14 or older, and to not have a criminal record. We do not accept volunteers with court-appointed community service.</p>
 							<p>NEEDED VOLUNTEERS: 2/5</p>
 							<ul class="actions">
